external-crates/move/crates/move-compiler/tests/development/enums/matching/phantoms.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/phantoms.move:7:17
  │
7 │     public enum P<phantom X> {
  │                 ^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

error[E13003]: feature is under active development
   ┌─ tests/development/enums/matching/phantoms.move:13:17
   │
13 │     public enum Q<phantom X> {
   │                 ^ Enums are not supported in bytecode.
   │
   = This feature is currently in development.

error[E13003]: feature is under active development
   ┌─ tests/development/enums/matching/phantoms.move:19:17
   │
19 │     public enum R<phantom X> {
   │                 ^ Enums are not supported in bytecode.
   │
   = This feature is currently in development.

error[E13003]: feature is under active development
   ┌─ tests/development/enums/matching/phantoms.move:25:17
   │
25 │     public enum S<phantom X> {
   │                 ^ Enums are not supported in bytecode.
   │
   = This feature is currently in development.

error[E13003]: feature is under active development
   ┌─ tests/development/enums/matching/phantoms.move:31:17
   │
31 │     public enum T<phantom X> {
   │                 ^ Enums are not supported in bytecode.
   │
   = This feature is currently in development.

error[E13003]: feature is under active development
   ┌─ tests/development/enums/matching/phantoms.move:37:17
   │
37 │     public enum U<phantom X> {
   │                 ^ Enums are not supported in bytecode.
   │
   = This feature is currently in development.

error[E13003]: feature is under active development
   ┌─ tests/development/enums/matching/phantoms.move:43:17
   │
43 │     public enum V<phantom X> {
   │                 ^ Enums are not supported in bytecode.
   │
   = This feature is currently in development.

